@@ -606,11 +606,12 @@ curses_flush (Driver *drvthis)
 	PrivateData *p = drvthis->private_data;
 	int c;
 
-	if ((c = getch()) != ERR)
+	if ((c = getch()) != ERR) {
 		if (c == 0x0C) {	/* ^L restores screen */
 			curses_restore_screen(drvthis);
-			ungetch(c);
 		}
+		ungetch(c);
+	}
 
 	if (p->drawBorder)
 		curses_wborder(drvthis);
@@ -668,9 +669,8 @@ curses_get_key (Driver *drvthis)
  * \return         Constant string with information.
  */
 MODULE_EXPORT const char *
-text_get_info (Driver *drvthis)
+curses_get_info (Driver *drvthis)
 {
-        //PrivateData *p = drvthis->private_data;
         static char *info_string = "curses driver";
 
         return info_string;
